Ansible/manifests/gpu-test.yaml
apiVersion: v1
kind: Pod
metadata:
  name: cuda-test
  namespace: ai
spec:
  restartPolicy: Never
  containers:
    - name: cuda
      image: nvidia/cuda:12.2.0-base-ubuntu22.04
      command: ['nvidia-smi']
      resources:
        limits:
          nvidia.com/gpu: 1
