Ansible/manifests/ingress-studio.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: supabase-data-studio
  namespace: data
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-staging
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/auth-secret: supabase-dashboard-basic
    nginx.ingress.kubernetes.io/auth-realm: 'Supabase Data'
    nginx.ingress.kubernetes.io/ssl-redirect: 'true'
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - data.4kakao.kro.kr
      secretName: data-supabase-tls
  rules:
    - host: data.4kakao.kro.kr
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: supabase-data-supabase-studio
                port:
                  number: 3000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: supabase-ai-studio
  namespace: ai
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-staging
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/auth-secret: supabase-dashboard-basic
    nginx.ingress.kubernetes.io/auth-realm: 'Supabase AI'
    nginx.ingress.kubernetes.io/ssl-redirect: 'true'
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - ai.4kakao.kro.kr
      secretName: ai-supabase-tls
  rules:
    - host: ai.4kakao.kro.kr
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: supabase-ai-supabase-studio
                port:
                  number: 3000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana
  namespace: monitoring
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-staging
    nginx.ingress.kubernetes.io/ssl-redirect: 'true'
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - grafana.4kakao.kro.kr
      secretName: grafana-tls
  rules:
    - host: grafana.4kakao.kro.kr
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kube-prometheus-stack-grafana
                port:
                  number: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd
  namespace: argocd
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-staging
    nginx.ingress.kubernetes.io/ssl-redirect: 'true'
    nginx.ingress.kubernetes.io/backend-protocol: 'HTTP'
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - argocd.4kakao.kro.kr
      secretName: argocd-tls
  rules:
    - host: argocd.4kakao.kro.kr
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: argocd-server
                port:
                  number: 80
